make images stop overflowing

--- a/app/assets/stylesheets/clean-blog.css
+++ b/app/assets/stylesheets/clean-blog.css
@@ -190,7 +190,7 @@ header.masthead .overlay {
 header.masthead .page-heading,
 header.masthead .post-heading,
 header.masthead .site-heading {
-  padding: 200px 0 150px;
+  padding: 20px 0 40px;
   color: white;
 }
 
@@ -198,7 +198,7 @@ header.masthead .site-heading {
   header.masthead .page-heading,
   header.masthead .post-heading,
   header.masthead .site-heading {
-    padding: 200px 0;
+    padding: 10x 0;
   }
 }
 
